@@ -170,8 +170,8 @@ else:
 plus4emu = plus4emuEnvironment.Program('plus4emu',
     ['gui/gui.cpp']
     + fluidCompile(['gui/gui.fl', 'gui/disk_cfg.fl', 'gui/disp_cfg.fl',
-                    'gui/snd_cfg.fl', 'gui/vm_cfg.fl', 'gui/debug.fl',
-                    'gui/about.fl'])
+                    'gui/kbd_cfg.fl', 'gui/snd_cfg.fl', 'gui/vm_cfg.fl',
+                    'gui/debug.fl', 'gui/about.fl'])
     + ['gui/main.cpp'])
 Depends(plus4emu, plus4emuLib)
 Depends(plus4emu, residLib)
