@@ -38,6 +38,7 @@
 
 class Plus4EmuGUI_DiskConfigWindow;
 class Plus4EmuGUI_DisplayConfigWindow;
+class Plus4EmuGUI_KbdConfigWindow;
 class Plus4EmuGUI_SoundConfigWindow;
 class Plus4EmuGUI_MachineConfigWindow;
 class Plus4EmuGUI_DebugWindow;
@@ -46,6 +47,7 @@ class Plus4EmuGUI_AboutWindow;
 #include "gui_fl.hpp"
 #include "disk_cfg_fl.hpp"
 #include "disp_cfg_fl.hpp"
+#include "kbd_cfg_fl.hpp"
 #include "snd_cfg_fl.hpp"
 #include "vm_cfg_fl.hpp"
 #include "debug_fl.hpp"
